ingress-jzgitlab.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: pingadminconsoles-ingress
spec:
  # Use the AWS Route53 FQDNs to access the Admin Consoles
  rules:
  # This rule gives external access to the PingAccess Admin Console
  - host: pingaccess-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
           serviceName: pingaccess
           servicePort: 9000
  # This rule gives external access to the PingFederate Admin Console
  - host: pingfederate-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingfederate
          servicePort: 9999
  # This rule gives external access to the PingData Admin Console
  - host: pingdataconsole-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdataconsole
          servicePort: 8443
  # This rule gives external access to the PingDirectory ConfigAPI
  - host: pingdirectory-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdirectory
          servicePort: 443
  # This rule gives external access to the PingDataGov ConfigAPI
  - host: pingdatagov-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdatagovernance
          servicePort: 443
  # This rule gives external access to the PingDataGov-PAP Console
  - host: pingdatagovernancepap-joezanini-github-lab.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdatagovernancepap
          servicePort: 8443
